# investment-notice

./: AGENTS.md  Cargo.toml  README.md  env-example.txt
.github/workflows/: ci.yml  investment-notice.yml
src/: analyzer.rs  data_fetcher.rs  email_sender.rs  gemini_client.rs  main.rs  models.rs  scheduler.rs
